--- a/mother.html
+++ b/mother.html
@@ -19,6 +19,7 @@
     <h1 class="js-head">Toss a Coin!</h1>
     <button class="js-toss" onclick="toss()">Toss!</button>
     <button class="js-again" onclick="resets()">try agian</button>
+    <p> it this changable? </p>
 
     <script>
         
