--- a/index.html
+++ b/index.html
@@ -2,53 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Send a Suggestion</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      background: #f9f9f9;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    form {
-      background: white;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-      width: 100%;
-      max-width: 400px;
-    }
-    input, textarea, button {
-      width: 100%;
-      margin-top: 10px;
-      padding: 10px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
-    button {
-      background: #4CAF50;
-      color: white;
-      border: none;
-      cursor: pointer;
-      margin-top: 20px;
-    }
-    button:hover {
-      background: #45a049;
-    }
-  </style>
+  <title>Send to Bale Channel</title>
 </head>
 <body>
+  <h1>Send a message to our Bale Channel</h1>
+  <form id="messageForm">
+    <input type="text" id="messageInput" placeholder="Type your message" required>
+    <button type="submit">Send</button>
+  </form>
 
-<form action="https://python-03.chbk.app/submit" method="POST">
-  <h2>Send a Suggestion</h2>
-  <input type="text" name="name" placeholder="Your Name" required />
-  <textarea name="message" rows="5" placeholder="Your Suggestion" required></textarea>
-  <button type="submit">Send</button>
-</form>
-
+  <script>
+    document.getElementById('messageForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const message = document.getElementById('messageInput').value;
+      
+      fetch('http://services.irn10.chabokan.net:35437/send', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({ text: message })
+      })
+      .then(response => {
+        if (response.ok) {
+          alert('Message sent!');
+        } else {
+          alert('Failed to send message.');
+        }
+      })
+      .catch(error => {
+        console.error('Error:', error);
+        alert('Error sending message.');
+      });
+    });
+  </script>
 </body>
 </html>
