--- a/index.html
+++ b/index.html
@@ -3,89 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ورود به ربات معلم یار</title>
-  <!-- Google Font -->
+  <title>ربات صدور گواهی</title>
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
-  <!-- Lottie Player -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.10.2/lottie.min.js"></script>
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
+    html, body { height: 100%; }
     body {
       font-family: 'Vazirmatn', sans-serif;
-      background-color: #f5f7fa;
-      color: #333;
-      display: flex;
-      min-height: 100vh;
-    }
-    .container {
-      margin: auto;
-      max-width: 900px;
-      width: 100%;
-      display: flex;
-      background: #fff;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      border-radius: 12px;
-      overflow: hidden;
-    }
-    .visual {
-      flex: 1;
-      background-color: #eef3fd;
+      background-color: #fff;
+      color: #222;
       display: flex;
       align-items: center;
       justify-content: center;
+      text-align: center;
+      flex-direction: column;
     }
     #lottie-animation {
-      width: 100%;
-      max-width: 400px;
-      height: auto;
+      width: 300px;
+      height: 300px;
+      margin-bottom: 20px;
     }
-    .form-area {
-      flex: 1;
-      padding: 2rem;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      text-align: center;
-    }
-    .form-area h1 {
-      font-size: 2.2rem;
-      margin-bottom: 1.5rem;
-      color: #1a237e;
+    h1 {
+      font-size: 2rem;
+      font-weight: 700;
+      margin-bottom: 16px;
     }
     .btn-primary {
-      background-color: #1a237e;
+      margin-top: 12px;
+      background-color: #1a73e8;
       color: #fff;
       border: none;
-      padding: 0.75rem 1.5rem;
-      font-size: 1.1rem;
-      font-weight: bold;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background 0.3s;
+      padding: 10px 24px;
+      font-size: 1rem;
+      border-radius: 4px;
       text-decoration: none;
       display: inline-block;
+      transition: background 0.2s;
     }
-    .btn-primary:hover {
-      background-color: #151a57;
-    }
-    @media (max-width: 768px) {
-      .container { flex-direction: column; }
-      .visual, .form-area { width: 100%; padding: 1.5rem; }
-      .form-area h1 { font-size: 1.8rem; }
-      .btn-primary { width: 100%; }
-    }
+    .btn-primary:hover { background-color: #1669c1; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="visual">
-      <div id="lottie-animation"></div>
-    </div>
-    <div class="form-area">
-      <h1>به ربات معلم یار خوش آمدید</h1>
-      <a href="https://ble.ir/moalemyar_feedback_bot" class="btn-primary">ورود به ربات</a>
-    </div>
-  </div>
+  <div id="lottie-animation"></div>
+  <h1>ربات صدور گواهی فصل دوم برنامه پنجشنبه‌خ‌های طلایی</h1>
+  <a href="https://ble.ir/moalemyar_feedback_bot" class="btn-primary">شروع</a>
 
   <script>
     lottie.loadAnimation({
@@ -93,7 +55,6 @@
       renderer: 'svg',
       loop: true,
       autoplay: true,
-      // Teacher-themed animation from LottieFiles
       path: 'https://assets9.lottiefiles.com/packages/lf20_2LdL7Q.json'
     });
   </script>
